; ModuleID = '/home/carl/AnghaBench/linux/drivers/usb/host/extr_u132-hcd.c_u132_monitor_queue_work.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/usb/host/extr_u132-hcd.c_u132_monitor_queue_work.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.u132 = type { i32, i32 }

@workqueue = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.u132*, i32)* @u132_monitor_queue_work to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @u132_monitor_queue_work(%struct.u132* %0, i32 %1) #0 {
  %3 = alloca %struct.u132*, align 8
  %4 = alloca i32, align 4
  store %struct.u132* %0, %struct.u132** %3, align 8
  store i32 %1, i32* %4, align 4
  %5 = load i32, i32* @workqueue, align 4
  %6 = load %struct.u132*, %struct.u132** %3, align 8
  %7 = getelementptr inbounds %struct.u132, %struct.u132* %6, i32 0, i32 1
  %8 = load i32, i32* %4, align 4
  %9 = call i64 @queue_delayed_work(i32 %5, i32* %7, i32 %8)
  %10 = icmp ne i64 %9, 0
  br i1 %10, label %11, label %15

11:                                               ; preds = %2
  %12 = load %struct.u132*, %struct.u132** %3, align 8
  %13 = getelementptr inbounds %struct.u132, %struct.u132* %12, i32 0, i32 0
  %14 = call i32 @kref_get(i32* %13)
  br label %15

15:                                               ; preds = %11, %2
  ret void
}

declare dso_local i64 @queue_delayed_work(i32, i32*, i32) #1

declare dso_local i32 @kref_get(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
